apps/getting-started-bgd/getting-started-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: getting-started
spec: {}
status: {}
