apps/getting-started-bgd/getting-started-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: getting-started
  name: getting-started
  namespace: getting-started
spec:
  replicas: 1
  selector:
    matchLabels:
      app: getting-started
  strategy: {}
  template:
    metadata:
      labels:
        app: getting-started
    spec:
      containers:
      - image: quay.io/redhatworkshops/bgd:latest
        name: getting-started
        resources: {}
---
