apps/getting-started-bgd/getting-started-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: getting-started
  name: getting-started
  namespace: getting-started
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: getting-started
    weight: 100
